--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,26 @@
 {
-  "name": "My PWA App",
-  "short_name": "PWA",
-  "start_url": "./index.html",
+  "name": "محاسبه GFR",
+  "short_name": "GFR",
+  "description": "اپلیکیشن محاسبه gfr کلیه (GFR)",
+  "id": "/",
+  "start_url": "index.html",
   "display": "standalone",
+  "orientation": "portrait",
+  "theme_color": "#6A1B9A",
   "background_color": "#ffffff",
-  "theme_color": "#007bff",
   "icons": [
     {
       "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ]
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
