--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#6A1B9A",
+  "theme_color": "#f3e5f5",
   "background_color": "#ffffff",
   "icons": [
     {
